Fix heading-style notes

--- a/files/en-us/learn/common_questions/what_is_a_url/index.html
+++ b/files/en-us/learn/common_questions/what_is_a_url/index.html
@@ -51,8 +51,7 @@ https://developer.mozilla.org/en-US/search?q=URL</pre>
 </div>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>There are <a href="https://en.wikipedia.org/wiki/Uniform_Resource_Locator">some extra parts and some extra rules</a> regarding URLs, but they are not relevant for regular users or Web developers. Don't worry about this, you don't need to know them to build and use fully functional URLs.</p>
+  <p><strong>Note:</strong> There are <a href="https://en.wikipedia.org/wiki/Uniform_Resource_Locator">some extra parts and some extra rules</a> regarding URLs, but they are not relevant for regular users or Web developers. Don't worry about this, you don't need to know them to build and use fully functional URLs.</p>
 </div>
 
 <h2 id="Scheme">Scheme</h2>
@@ -73,8 +72,7 @@ https://developer.mozilla.org/en-US/search?q=URL</pre>
 </ul>
 
 <div class="notecard note">
-  <h4>Note</h4>
-<p>The separator between the scheme and authority is <code>://</code>. The colon separates the scheme from the next part of the URL, while <code>//</code> indicates that the next part of the URL is the authority.</p>
+<p><strong>Note:</strong> The separator between the scheme and authority is <code>://</code>. The colon separates the scheme from the next part of the URL, while <code>//</code> indicates that the next part of the URL is the authority.</p>
 <p>One example of a URL that doesn't use an authority is the mail client (<code>mailto:foobar</code>). It contains a scheme but doesn't use an authority component. Therefore, the colon is not followed by two slashes and only acts as a delimiter between the scheme and mail address.</p>
 </div>
 
@@ -110,8 +108,7 @@ https://developer.mozilla.org/en-US/search?q=URL</pre>
 </ul>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>When specifying URLs to load resources as part of a page (such as when using the <code>&lt;script&gt;</code>, <code>&lt;audio&gt;</code>, <code>&lt;img&gt;</code>, <code>&lt;video&gt;</code>, and the like), you should generally only use HTTP and HTTPS URLs, with few exceptions (one notable one being <code>data:</code>; see <a href="/en-US/docs/Web/HTTP/Basics_of_HTTP/Data_URIs">Data URLs</a>). Using FTP, for example, is not secure and is no longer supported by modern browsers.</p>
+  <p><strong>Note:</strong> When specifying URLs to load resources as part of a page (such as when using the <code>&lt;script&gt;</code>, <code>&lt;audio&gt;</code>, <code>&lt;img&gt;</code>, <code>&lt;video&gt;</code>, and the like), you should generally only use HTTP and HTTPS URLs, with few exceptions (one notable one being <code>data:</code>; see <a href="/en-US/docs/Web/HTTP/Basics_of_HTTP/Data_URIs">Data URLs</a>). Using FTP, for example, is not secure and is no longer supported by modern browsers.</p>
 </div>
 
 <p>Other technologies, such as {{Glossary("CSS")}} or {{Glossary("JavaScript")}}, use URLs extensively, and these are really the heart of the Web.</p>
