--- a/files/en-us/learn/css/howto/make_box_transparent/index.html
+++ b/files/en-us/learn/css/howto/make_box_transparent/index.html
@@ -28,8 +28,7 @@ tags:
 <p>{{EmbedGHLiveSample("css-examples/howto/opacity.html", '100%', 770)}}</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Take care that your text retains enough contrast with the background in cases where you are overlaying an image; otherwise you may make the content hard to read.</p>
+  <p><strong>Note:</strong> Take care that your text retains enough contrast with the background in cases where you are overlaying an image; otherwise you may make the content hard to read.</p>
 </div>
 
 <h2 id="See_also">See also</h2>
