--- a/files/en-us/learn/css/styling_text/styling_links/index.html
+++ b/files/en-us/learn/css/styling_text/styling_links/index.html
@@ -96,8 +96,7 @@ tags:
 </ul>
 
 <div class="notecard note">
-<h4>Note</h4>
-<p>You are not just limited to the above properties to style your links — you are free to use any properties you like.</p>
+<p><strong>Note:</strong> You are not just limited to the above properties to style your links — you are free to use any properties you like.</p>
 </div>
 
 <h3 id="Styling_some_links">Styling some links</h3>
