--- a/files/en-us/learn/forms/html5_input_types/index.html
+++ b/files/en-us/learn/forms/html5_input_types/index.html
@@ -174,8 +174,7 @@ price.addEventListener('input', function() {
 <p>Here we store references to the <code>range</code> input and the <code>output</code> in two variables. Then we immediately set the <code>output</code>'s <code><a href="/en-US/docs/Web/API/Node/textContent">textContent</a></code> to the current <code>value</code> of the input. Finally, an event listener is set to ensure that whenever the range slider is moved, the <code>output</code>'s <code>textContent</code> is updated to the new value.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>There is a nice tutorial covering this subject on CSS Tricks: <a href="https://css-tricks.com/the-output-element/">The Output Element</a>.</p>
+  <p><strong>Note:</strong> There is a nice tutorial covering this subject on CSS Tricks: <a href="https://css-tricks.com/the-output-element/">The Output Element</a>.</p>
 </div>
 
 <h2 id="Date_and_time_pickers">Date and time pickers</h2>
