--- a/files/en-us/learn/performance/multimedia/index.html
+++ b/files/en-us/learn/performance/multimedia/index.html
@@ -28,8 +28,7 @@ tags:
 </table>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>This is a high-level introduction to optimizing multimedia delivery on the web, covering general principles and techniques. For a more in-depth guide, see  <a href="https://images.guide">https://images.guide</a>.</p>
+  <p><strong>Note:</strong> This is a high-level introduction to optimizing multimedia delivery on the web, covering general principles and techniques. For a more in-depth guide, see  <a href="https://images.guide">https://images.guide</a>.</p>
 </div>
 
 <h2 id="Why_optimize_your_multimedia">Why optimize your multimedia?</h2>
@@ -61,8 +60,7 @@ tags:
 <p>The optimal file format typically depends on the character of the image.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>For general information on image types see the <a href="/en-US/docs/Web/Media/Formats/Image_types">Image file type and format guide</a></p>
+  <p><strong>Note:</strong> For general information on image types see the <a href="/en-US/docs/Web/Media/Formats/Image_types">Image file type and format guide</a></p>
 </div>
 
 <p>The <a href="/en-US/docs/Web/Media/Formats/Image_types#svg">SVG</a> format is more appropriate for images that have few colors and that are not photo-realistic. This requires the source to be available as in a vector graphic format. Should such an image only exist as a bitmap, then <a href="/en-US/docs/Web/Media/Formats/Image_types#png">PNG</a> would be the fallback format to chose. Examples for these types of motifs are logos, illustrations, charts or icons (note: SVGs are far better than icon fonts!). Both formats support transparency.</p>
