--- a/files/en-us/learn/performance/perceived_performance/index.html
+++ b/files/en-us/learn/performance/perceived_performance/index.html
@@ -33,8 +33,7 @@ tags:
 <p>A good general rule for improving perceived performance is that it is usually better to provide a quick response and regular status updates than make the user wait until an operation fully completes (before providing any information). For example, when loading a page it is better to display the text when it arrives rather than wait for all the images and other resources. Even though the content has not fully downloaded the user can see something is happening and they can start interacting with the content.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Time appears to pass more quickly for users who are actively engaged, distracted, or entertained, than for those who are waiting passively for something to happen. Where possible, actively engage and inform users who are waiting for a task to complete.</p>
+  <p><strong>Note:</strong> Time appears to pass more quickly for users who are actively engaged, distracted, or entertained, than for those who are waiting passively for something to happen. Where possible, actively engage and inform users who are waiting for a task to complete.</p>
 </div>
 
 <p>Similarly, it is better to display a "loading animation" as soon as a user clicks a link to perform a long running operation. While this doesn't change the time taken to complete the operation, the site feels more responsive, and the user knows that it is working on something useful.</p>
