Remove self-link

--- a/files/en-us/learn/css/first_steps/how_css_is_structured/index.html
+++ b/files/en-us/learn/css/first_steps/how_css_is_structured/index.html
@@ -522,7 +522,7 @@ padding- left: 10px;</pre>
 <ol>
  <li><a href="/en-US/docs/Learn/CSS/First_steps/What_is_CSS">What is CSS?</a></li>
  <li><a href="/en-US/docs/Learn/CSS/First_steps/Getting_started">Getting started with CSS</a></li>
- <li><a href="/en-US/docs/Learn/CSS/First_steps/How_CSS_is_structured">How CSS is structured</a></li>
+ <li>How CSS is structured</li>
  <li><a href="/en-US/docs/Learn/CSS/First_steps/How_CSS_works">How CSS works</a></li>
  <li><a href="/en-US/docs/Learn/CSS/First_steps/Using_your_new_knowledge">Using your new knowledge</a></li>
 </ol>
