Fix "Normal Flow" page

--- a/files/en-us/learn/css/css_layout/normal_flow/index.html
+++ b/files/en-us/learn/css/css_layout/normal_flow/index.html
@@ -86,7 +86,7 @@ span {
 
 <ul>
  <li><a href="/en-US/docs/Learn/CSS/CSS_layout/Introduction">Introduction to CSS layout</a></li>
- <li><a href="/en-US/docs/Learn/CSS/CSS_layout/Normal_Flow">Normal flow</a></li>
+ <li>Normal flow</li>
  <li><a href="/en-US/docs/Learn/CSS/CSS_layout/Flexbox">Flexbox</a></li>
  <li><a href="/en-US/docs/Learn/CSS/CSS_layout/Grids">Grid</a></li>
  <li><a href="/en-US/docs/Learn/CSS/CSS_layout/Floats">Floats</a></li>
