Learn area: remove (most) inline styles

--- a/files/en-us/learn/common_questions/how_do_you_host_your_website_on_google_app_engine/index.html
+++ b/files/en-us/learn/common_questions/how_do_you_host_your_website_on_google_app_engine/index.html
@@ -52,13 +52,13 @@ tags:
  <li>Open <a href="https://console.cloud.google.com/cloudshell/editor">Google Cloud Shell</a>.</li>
  <li>Drag and drop the <code>sample-app</code> folder into the left pane of the code editor.</li>
  <li>Run the following in the command line to select your project:
-  <pre class="brush:bash no-line-numbers" style="margin: 1em 0;">gcloud config set project <em>gaesamplesite</em></pre>
+  <pre class="brush: bash">gcloud config set project <em>gaesamplesite</em></pre>
  </li>
  <li>Then run the following command to go to your app's directory:
-  <pre class="brush:bash no-line-numbers" style="margin: 1em 0;">cd <em>sample-app</em></pre>
+  <pre class="brush: bash">cd <em>sample-app</em></pre>
  </li>
  <li>You are now ready to deploy your application, i.e. upload your app to App Engine:
-  <pre class="brush:bash no-line-numbers" style="margin: 1em 0;">gcloud app deploy</pre>
+  <pre class="brush: bash">gcloud app deploy</pre>
  </li>
  <li>Enter a number to choose the region where you want your application located.</li>
  <li>Enter <code>Y</code> to confirm.</li>
