--- a/files/en-us/learn/common_questions/pages_sites_servers_and_search_engines/index.html
+++ b/files/en-us/learn/common_questions/pages_sites_servers_and_search_engines/index.html
@@ -82,7 +82,7 @@ tags:
 
 <p>All web pages available on the web are reachable through a unique address. To access a page, just type its address in your browser address bar:</p>
 
-<p style="text-align: center;"><img alt="Example of a web page address in the browser address bar" src="web-page.jpg"></p>
+<img alt="Example of a web page address in the browser address bar" src="web-page.jpg">
 
 <h3 id="Web_site">Web site</h3>
 
