--- a/files/en-us/learn/common_questions/thinking_before_coding/index.html
+++ b/files/en-us/learn/common_questions/thinking_before_coding/index.html
@@ -111,7 +111,7 @@ tags:
 	</thead>
 	<tbody>
 		<tr>
-			<td style="vertical-align: top;">Let people hear your music</td>
+			<td>Let people hear your music</td>
 			<td>
 			<ol>
 				<li>Record music</li>
@@ -121,7 +121,7 @@ tags:
 			</td>
 		</tr>
 		<tr>
-			<td style="vertical-align: top;">Talk about your music</td>
+			<td>Talk about your music</td>
 			<td>
 			<ol>
 				<li>Write a few articles to start the discussion</li>
@@ -131,7 +131,7 @@ tags:
 			</td>
 		</tr>
 		<tr>
-			<td style="vertical-align: top;">Meet other musicians</td>
+			<td>Meet other musicians</td>
 			<td>
 			<ol>
 				<li>Provide ways for people to contact you (Email? Facebook? Phone? Mail?)</li>
@@ -140,7 +140,7 @@ tags:
 			</td>
 		</tr>
 		<tr>
-			<td style="vertical-align: top;">Sell goodies</td>
+			<td>Sell goodies</td>
 			<td>
 			<ol>
 				<li>Create the goodies</li>
@@ -152,7 +152,7 @@ tags:
 			</td>
 		</tr>
 		<tr>
-			<td style="vertical-align: top;">Teach music through videos</td>
+			<td>Teach music through videos</td>
 			<td>
 			<ol>
 				<li>Record video lessons</li>
