--- a/files/en-us/learn/css/first_steps/how_css_works/index.html
+++ b/files/en-us/learn/css/first_steps/how_css_works/index.html
@@ -62,7 +62,7 @@ tags:
 &lt;/p&gt;
 </pre>
 
-<p>In the DOM, the node corresponding to our <code>&lt;p&gt;</code> element is a parent. Its children are a text node and the three nodes corresponding to our <code>&lt;span&gt;</code> elements. The <code>SPAN</code> nodes are also <span style="background-color: #f5f6f5;">parents</span>, with text nodes as their children:</p>
+<p>In the DOM, the node corresponding to our <code>&lt;p&gt;</code> element is a parent. Its children are a text node and the three nodes corresponding to our <code>&lt;span&gt;</code> elements. The <code>SPAN</code> nodes are also parents, with text nodes as their children:</p>
 
 <pre>P
 ├─ "Let's use:"
