--- a/files/en-us/learn/forms/how_to_build_custom_form_controls/index.html
+++ b/files/en-us/learn/forms/how_to_build_custom_form_controls/index.html
@@ -295,9 +295,9 @@ tags:
 <table>
  <thead>
   <tr>
-   <th scope="col" style="text-align: center;">Basic state</th>
-   <th scope="col" style="text-align: center;">Active state</th>
-   <th scope="col" style="text-align: center;">Open state</th>
+   <th scope="col">Basic state</th>
+   <th scope="col">Active state</th>
+   <th scope="col">Open state</th>
   </tr>
  </thead>
  <tbody>
@@ -307,7 +307,7 @@ tags:
    <td>{{EmbedLiveSample("Open_state",120,130, "", "Learn/Forms/How_to_build_custom_form_controls/Example_1")}}</td>
   </tr>
   <tr>
-   <td colspan="3" style="text-align: center;"><a href="/en-US/docs/Learn/Forms/How_to_build_custom_form_controls/Example_1">Check out the source code</a></td>
+   <td colspan="3"><a href="/en-US/docs/Learn/Forms/How_to_build_custom_form_controls/Example_1">Check out the source code</a></td>
   </tr>
  </tbody>
 </table>
@@ -392,8 +392,8 @@ tags:
 <table>
  <thead>
   <tr>
-   <th scope="col" style="text-align: center;">Without JS</th>
-   <th scope="col" style="text-align: center;">With JS</th>
+   <th scope="col">Without JS</th>
+   <th scope="col">With JS</th>
   </tr>
  </thead>
  <tbody>
@@ -402,7 +402,7 @@ tags:
    <td>{{EmbedLiveSample("JS",120,130, "", "Learn/Forms/How_to_build_custom_form_controls/Example_2")}}</td>
   </tr>
   <tr>
-   <td colspan="2" style="text-align: center;"><a href="/en-US/docs/Learn/Forms/How_to_build_custom_form_controls/Example_2">Check out the source code</a></td>
+   <td colspan="2"><a href="/en-US/docs/Learn/Forms/How_to_build_custom_form_controls/Example_2">Check out the source code</a></td>
   </tr>
  </tbody>
 </table>
@@ -570,7 +570,7 @@ window.addEventListener('load', function () {
 <table>
  <thead>
   <tr>
-   <th scope="col" style="text-align: center;">Live example</th>
+   <th scope="col">Live example</th>
   </tr>
  </thead>
  <tbody>
@@ -578,7 +578,7 @@ window.addEventListener('load', function () {
    <td>{{EmbedLiveSample("Change_states",120,130, "", "Learn/Forms/How_to_build_custom_form_controls/Example_3")}}</td>
   </tr>
   <tr>
-   <td style="text-align: center;"><a href="/en-US/docs/Learn/Forms/How_to_build_custom_form_controls/Example_3">Check out the source code</a></td>
+   <td><a href="/en-US/docs/Learn/Forms/How_to_build_custom_form_controls/Example_3">Check out the source code</a></td>
   </tr>
  </tbody>
 </table>
@@ -677,7 +677,7 @@ window.addEventListener('load', function () {
 <table>
  <thead>
   <tr>
-   <th scope="col" style="text-align: center;">Live example</th>
+   <th scope="col">Live example</th>
   </tr>
  </thead>
  <tbody>
@@ -685,7 +685,7 @@ window.addEventListener('load', function () {
    <td>{{EmbedLiveSample("Change_states",120,130, "", "Learn/Forms/How_to_build_custom_form_controls/Example_4")}}</td>
   </tr>
   <tr>
-   <td style="text-align: center;"><a href="/en-US/docs/Learn/Forms/How_to_build_custom_form_controls/Example_4">Check out the source code</a></td>
+   <td><a href="/en-US/docs/Learn/Forms/How_to_build_custom_form_controls/Example_4">Check out the source code</a></td>
   </tr>
  </tbody>
 </table>
@@ -755,7 +755,7 @@ window.addEventListener('load', function () {
 <table>
  <thead>
   <tr>
-   <th scope="col" style="text-align: center;">Live example</th>
+   <th scope="col">Live example</th>
   </tr>
  </thead>
  <tbody>
@@ -763,7 +763,7 @@ window.addEventListener('load', function () {
    <td>{{EmbedLiveSample("Change_states",120,130, "", "Learn/Forms/How_to_build_custom_form_controls/Example_5")}}</td>
   </tr>
   <tr>
-   <td style="text-align: center;"><a href="/en-US/docs/Learn/Forms/How_to_build_custom_form_controls/Example_5">Check out the final source code</a></td>
+   <td><a href="/en-US/docs/Learn/Forms/How_to_build_custom_form_controls/Example_5">Check out the final source code</a></td>
   </tr>
  </tbody>
 </table>
