--- a/files/en-us/learn/getting_started_with_the_web/javascript_basics/index.html
+++ b/files/en-us/learn/getting_started_with_the_web/javascript_basics/index.html
@@ -176,7 +176,7 @@ Everything in between is a comment.
 
 <p>If your comment contains no line breaks, it's an option to put it behind two slashes like this:</p>
 
-<pre class="brush: js" style="font-size: 14px;">// This is a comment
+<pre class="brush: js">// This is a comment
 </pre>
 
 <h3 id="Operators">Operators</h3>
