--- a/files/en-us/learn/common_questions/what_software_do_i_need/index.html
+++ b/files/en-us/learn/common_questions/what_software_do_i_need/index.html
@@ -147,7 +147,7 @@ tags:
  <thead>
   <tr>
    <th scope="col">Operating system</th>
-   <th colspan="2" scope="col" style="text-align: center;"> FTP software</th>
+   <th colspan="2" scope="col"> FTP software</th>
   </tr>
  </thead>
  <tbody>
@@ -155,7 +155,7 @@ tags:
    <td>Windows</td>
    <td>
     <ul>
-     <li><a href="https://winscp.net" rel="external">WinSCP</a></li>
+     <li><a href="https://winscp.net">WinSCP</a></li>
      <li><a href="https://mobaxterm.mobatek.net/">Moba Xterm</a></li>
     </ul>
    </td>
