--- a/files/en-us/learn/forms/html_forms_in_legacy_browsers/index.html
+++ b/files/en-us/learn/forms/html_forms_in_legacy_browsers/index.html
@@ -55,14 +55,14 @@ tags:
 <table>
  <thead>
   <tr>
-   <th scope="col" style="text-align: center;">Supported</th>
-   <th scope="col" style="text-align: center;">Not supported</th>
+   <th>Supported</th>
+   <th>Not supported</th>
   </tr>
  </thead>
  <tbody>
   <tr>
-   <th style="text-align: center;"><img alt="Screen shot of the color input on Chrome for Mac OSX" src="color-fallback-chrome.png"></th>
-   <th style="text-align: center;"><img alt="Screen shot of the color input on Firefox for Mac OSX" src="color-fallback-firefox.png"></th>
+   <td><img alt="Screen shot of the color input on Chrome for Mac OSX" src="color-fallback-chrome.png"></td>
+   <td><img alt="Screen shot of the color input on Firefox for Mac OSX" src="color-fallback-firefox.png"></td>
   </tr>
  </tbody>
 </table>
