Learn area: suppress conversion for wide tables

--- a/files/en-us/learn/css/building_blocks/selectors/pseudo-classes_and_pseudo-elements/index.html
+++ b/files/en-us/learn/css/building_blocks/selectors/pseudo-classes_and_pseudo-elements/index.html
@@ -125,7 +125,7 @@ tags:
 
 <h3 id="Pseudo-classes">Pseudo-classes</h3>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <thead>
   <tr>
    <th scope="col">Selector</th>
@@ -338,7 +338,7 @@ tags:
 
 <h3 id="Pseudo-elements">Pseudo-elements</h3>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <thead>
   <tr>
    <th scope="col">Selector</th>
