--- a/files/en-us/learn/css/building_blocks/values_and_units/index.html
+++ b/files/en-us/learn/css/building_blocks/values_and_units/index.html
@@ -60,7 +60,7 @@ tags:
 
 <p>There are various numeric value types that you might find yourself using in CSS. The following are all classed as numeric:</p>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <thead>
   <tr>
    <th scope="col">Data type</th>
@@ -148,7 +148,7 @@ tags:
 
 <p>Relative length units are relative to something else, perhaps the size of the parent element's font, or the size of the viewport. The benefit of using relative units is that with some careful planning you can make it so the size of text or other elements scales relative to everything else on the page. Some of the most useful units for web development are listed in the table below.</p>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <thead>
   <tr>
    <th scope="col">Unit</th>
