--- a/files/en-us/learn/forms/basic_native_form_controls/index.html
+++ b/files/en-us/learn/forms/basic_native_form_controls/index.html
@@ -285,7 +285,7 @@ tags:
 
 <p>Many of the elements used to define form controls have some of their own specific attributes. However, there is a set of attributes common to all form elements. You've met some of these already, but below is a list of those common attributes, for your reference:</p>
 
-<table>
+<table class="no-markdown">
  <thead>
   <tr>
    <th scope="col">Attribute name</th>
