--- a/files/en-us/learn/forms/html_forms_in_legacy_browsers/index.html
+++ b/files/en-us/learn/forms/html_forms_in_legacy_browsers/index.html
@@ -52,7 +52,7 @@ tags:
   &lt;input type="color" id="myColor" name="color"&gt;
 &lt;/label&gt;</pre>
 
-<table>
+<table class="no-markdown">
  <thead>
   <tr>
    <th>Supported</th>
