--- a/files/en-us/learn/getting_started_with_the_web/css_basics/index.html
+++ b/files/en-us/learn/getting_started_with_the_web/css_basics/index.html
@@ -87,7 +87,7 @@ tags:
 
 <p>There are many different types of selectors. The examples above use <strong>element selectors</strong>, which select all elements of a given type. But we can make more specific selections as well. Here are some of the more common types of selectors:</p>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <thead>
   <tr>
    <th scope="col">Selector name</th>
