--- a/files/en-us/learn/html/multimedia_and_embedding/other_embedding_technologies/index.html
+++ b/files/en-us/learn/html/multimedia_and_embedding/other_embedding_technologies/index.html
@@ -293,7 +293,7 @@ textarea.onkeyup = function(){
 
 <p>If you find yourself needing to embed plugin content, this is the kind of information you'll need, at a minimum:</p>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <thead>
   <tr>
    <th scope="col"></th>
