--- a/files/en-us/learn/tools_and_testing/cross_browser_testing/accessibility/index.html
+++ b/files/en-us/learn/tools_and_testing/cross_browser_testing/accessibility/index.html
@@ -369,7 +369,7 @@ a:focus, input:focus, button:focus, select:focus {
 
 <p>VO has many keyboard commands, and we won't list them all here. The basic ones you'll need for web page testing are in the following table. In the keyboard shortcuts, "VO" means "the VoiceOver modifier".</p>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <caption>Most common VoiceOver keyboard shortcuts</caption>
  <thead>
   <tr>
@@ -471,7 +471,7 @@ a:focus, input:focus, button:focus, select:focus {
 
 <p>NVDA has many keyboard commands, and we won't list them all here. The basic ones you'll need for web page testing are in the following table. In the keyboard shortcuts, "NVDA" means "the NVDA modifier".</p>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <caption>Most common NVDA keyboard shortcuts</caption>
  <thead>
   <tr>
