--- a/files/en-us/learn/tools_and_testing/understanding_client-side_tools/command_line/index.html
+++ b/files/en-us/learn/tools_and_testing/understanding_client-side_tools/command_line/index.html
@@ -322,7 +322,7 @@ https://developer.mozilla.org/en-US/docs/Web/API/fetch</pre>
 
 <p>There's pros and cons each way — and this list of pros and cons for globally installing is far from exhaustive:</p>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <thead>
   <tr>
    <th scope="col">Pros of installing globally</th>
