--- a/files/en-us/learn/css/building_blocks/selectors/index.html
+++ b/files/en-us/learn/css/building_blocks/selectors/index.html
@@ -139,7 +139,7 @@ tags:
 
 <p>The below table gives you an overview of the selectors you have available to use, along with links to the pages in this guide which will show you how to use each type of selector. I have also included a link to the MDN page for each selector where you can check browser support information. You can use this as a reference to come back to when you need to look up selectors later in the material, or as you experiment with CSS generally.</p>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <thead>
   <tr>
    <th scope="col">Selector</th>
