--- a/files/en-us/learn/server-side/django/generic_views/index.html
+++ b/files/en-us/learn/server-side/django/generic_views/index.html
@@ -246,7 +246,7 @@ For example, <strong>&lt;something&gt;</strong> , will capture the marked patt
 
 <p>The main parts of the syntax you will need to know for declaring the pattern matches are:</p>
 
-<table class="standard-table">
+<table class="standard-table no-markdown">
  <thead>
   <tr>
    <th scope="col">Symbol</th>
@@ -422,7 +422,7 @@ def book_detail_view(request, primary_key):
   <p><strong>Note:</strong> The author link in the template above has an empty URL because we've not yet created an author detail page to link to.
   Once the detail page exists we can get its URL with either of these two approaches:</p>
   <ul>
-    <li>Use the <code>url</code> template tag to reverse the 'author-detail' URL (defined in the URL mapper), passing it the author instance for the book: 
+    <li>Use the <code>url</code> template tag to reverse the 'author-detail' URL (defined in the URL mapper), passing it the author instance for the book:
       <pre class="brush: python">&lt;a href="{% url 'author-detail' book.author.pk %}"&gt;\{{ book.author }}&lt;/a&gt;</pre>
     </li>
     <li>Call the author model's <code>get_absolute_url()</code> method (this performs the same reversing operation):
